--- a/project.css
+++ b/project.css
@@ -2,9 +2,43 @@ body{
     margin: 0px;
     padding: 0px;
     background: url('project.jpg');
+
 }
+/* header::before{
+    content: "";
+    background: url('project.jpg');
+    position: absolute;
+    z-index: -1;
+    height: 100%;
+    width: 100%;
+    top: 0px;
+    opacity: 0.9;
+} */
 *{
     font-family: "Trirong", serif;
+}
+.images{
+    /* border: 2px solid black; */
+    height: 200px;
+    width: 30%;
+    gap: 5px;
+    display: inline-block;
+    margin: 285px 820px;
+    /* padding: 10px 10px; */
+    display: flex;
+}
+.images img{
+    border: 3px solid white;
+    border-radius: 10px;
+    width: 10%;
+    height: 100%;
+    object-fit: cover;
+    transition: all ease 0.9s;
+    cursor: pointer;
+}
+.images img:hover{
+    width: 100%;
+    height: 150%;
 }
 .left{
 /* border:2px solid black; */
@@ -53,12 +87,24 @@ margin-left: 20px;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 20px;
     /* display: inline-block; */
-    margin: 187px 367px;
+    margin: -575px 200px;
     /* padding: 7px 370px  */
     width: 644px;
-    height: 341px;
+    height: 400spx;
     color: white;
     text-align:  center;
+}
+.lg{
+    /* border: 2px solid rgb(255, 255, 255); */
+    margin: -86px 26px;
+    height: 389px;
+    width: 200px;
+    display: flex;
+    justify-content: center;
+    padding: 2px 28px;
+}
+.lg p{
+    color: white;
 }
 .container h3{
     text-align: center;
