--- a/project2.css
+++ b/project2.css
@@ -10,7 +10,6 @@ body {
     padding: 0px;
     font-family: 'Pacifico', cursive;
 }
-
 .navbar {
     display: flex;
     justify-content: center;
@@ -33,7 +32,7 @@ li {
 
 li a {
     text-decoration: none;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 1.2rem;
 }
 
@@ -130,6 +129,7 @@ h2 {
     color: black;
     justify-content: center;
     align-items: center;
+    border: 2px solid black;
 }
 .ourclients .thirdcontainer img{
     padding: 0px 100px;
